.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b1 - Unreleased
------------------

- Update jquery.js to use jquery-1.4.min.js. The change is in
  Plone3rdParty/branches/4.0/skins/plone_3rdParty
  [smcmahon]

- Remove explicit iefixes (css and js) from the main_template, which
  will be pulled now from the ResourceRegistries, using the
  conditionalcomments property.
  Refs http://dev.plone.org/plone/ticket/9278.
  [dukebody]

- Move iefixes.js to the ploneclassic.theme package, since we agreed
  upon that every theme should be responsible of its own fixes for IE.
  Refs http://dev.plone.org/plone/ticket/9278.
  [dukebody]

- Make global_cache_settings responsible for deciding to switch on gzip
  compression instead of doing it in the enableHTTPCompression script. This
  avoids another costly Python script call.
  [hannosch]

- Avoid the test function in the main_template. It doesn't exist in view page
  template files.
  [hannosch]

- Avoid the getSectionFromURL method completely and merge functionality into
  the bodyClass method.
  [hannosch]

- Display logoIcon.png instead of favicon.ico on the Zope root overview screen,
  for compatibility with IE which refuses to render X-ICON format images in the
  document body.
  [davisagli]

- Avoid yet another mindless Python script and deprecate renderBase.
  [hannosch]

- Simplify the charset handling, by moving the actual setting into the
  global_cache_headers macro.
  [hannosch]

- Replaced the getSectionFromURL Python script with a view method.
  [hannosch]

- Deprecated the computeRelatedItems script in favor of a method on the
  related items viewlet.
  [hannosch]

- Hide plonetheme.classic from the list of uninstallable products to reduce
  confusion, as at this point it can't be uninstalled without breaking